tests/fixtures/invalid/max_dict_set.py
# Cannot call max() with Dict[str, int], Set[int]
x = max({"a": 1}, {1, 2, 3})
